--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ getting banned.</p>
 	<h2>Should I be scared?</h2>
 	<p>Not yet! Roblox is doing this as an A/B test using the beta version of Roblox.</p>
 	<p>First, check if you have Byfron. Go to this Roblox link: <a href="https://clientsettings.roblox.com/v2/user-channel?binaryType=WindowsPlayer">https://clientsettings.roblox.com/v2/user-channel?binaryType=WindowsPlayer</a></p>
-	<p>If it says “{"channelName":"LIVE"}” then you do not have Byfron and you are safe. If not, continue with this guide.</p>
+	<p>If it says “{"channelName":"LIVE"}” or "{"channelName":"znext"}" then you do not have Byfron and you are safe. If not, continue with this guide.</p>
 <br/>
 	<h2>TAMPERMONKEY INSTRUCTIONS:</h2>
             <br/>
