--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ getting banned.</p>
 	<!-- First video box -->
 	<div class="video-box">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/9gkjM7qt4rA" title="Synapse X Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <center><a href="https://x.synapse.to/"><h3>Synapse (15$ to 20$)</h3></a></center>
+   <center><a href="https://x.synapse.to/"><h3>Synapse (offsale temporarily)</h3></a></center>
 	</div>
 
 	<!-- Second video box -->
