--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ getting banned.</p>
 	<!-- First video box -->
 	<div class="video-box">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/9gkjM7qt4rA" title="Synapse X Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <center><a href="https://x.synapse.to/"><h3>Synapse (offsale temporarily)</h3></a></center>
+   <center><a href="https://x.synapse.to/"><h3>Synapse (temporarily offsale)</h3></a></center>
 	</div>
 
 	<!-- Second video box -->
@@ -119,6 +119,14 @@ getting banned.</p>
   <source src="https://cdn.discordapp.com/attachments/1099171737184251986/1099171800501461033/chrome_WYrbNeQ7x5.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+              <br/>
+              <h1>BloxStrap Method</h1>
+              	<iframe width="560" height="315" src="https://www.youtube.com/embed/bHiwG3tM2SU" title="Synapse X Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              
+              <li>You might need to uninstall Roblox Studio & Roblox (Game)</li>
+              <li>Make sure <b>Synapse X</b> is closed.</li>
+		<li>Redownload the Roblox and open it up, its going to open automatically with the help of <b>Synapse</b></li>
+		<li>Its going to say <b>"You're on the beta version, do you want to update?"</b> Let it through with <b>"Yes"</b>, so it wouldn't really open the <b>Roblox</b> strangely but you'll have to click on play <b>Roblox</b> again and then it'll work.</li>
 					</div>
 				</div>
         </div>
@@ -139,8 +147,3 @@ getting banned.</p>
 		</section>
 
 		</footer>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
