--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ getting banned.</p>
 		<li>Go to <a href="https://www.tampermonkey.net/">https://www.tampermonkey.net/</a></li>
 		<li>Hit “Get From Store”</li>
 		<li>Install Tampermonkey</li>
-		<li>Download this script: <a href="https://cdn.discordapp.com/attachments/1062038751737548883/1099149045815062569/fix_channel_roblox.user.js">https://cdn.discordapp.com/attachments/1062038751737548883/1099149045815062569/fix_channel_roblox.user.js</a></li>
+		<li>Download this script: <a href="https://greasyfork.org/en/scripts/446731-auto-znext-channel">https://greasyfork.org/en/scripts/446731-auto-znext-channel</a></li>
 		<li>Upload the script to Tampermonkey.</li>
 		<li>Get Roblox from the Roblox website again</li>
 		<li>Reinstall Roblox using the NEW version you downloaded</li>
